trying to add getStudentsBySubjects route handler
