# packages/api/src/declarations/interfaces/api/api.quey-users.ts
@@ -2,13 +2,17 @@ import { PublicStudentData, PublicTutorData } from '@adopt-a-student/common';
 
 import { FirebaseCallableFunctionHandler } from '../../types';
 
+export interface GetStudentsBySubjectsBody {
+  localeSubjectIds: string[];
+}
+export interface GetStudentsBySubjectsResult {
+  data: PublicStudentData[];
+}
 /** Get students by subjects, save this in subject */
 export type ApiGetStudentsBySubjectsHandler = FirebaseCallableFunctionHandler<
-  {
-    localeSubjectIds: string[];
-  },
+  GetStudentsBySubjectsBody,
   // returns
-  { data: PublicStudentData[] }
+  GetStudentsBySubjectsResult
 >;
 /** Get tutors by subjects, save this in subject */
 export type ApiGetTutorsBySubjectsHandler = FirebaseCallableFunctionHandler<
